# llama.cpp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  convert_hf_to_gguf.py
.github/workflows/: build.yml
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h  sampling.cpp  sampling.h
common/minja/: chat-template.hpp  minja.hpp
docs/backend/hexagon/: CMakeUserPresets.json  README.md  developer.md  run-bench.sh  run-cli.sh  run-tool.sh
docs/backend/snapdragon/: CMakeUserPresets.json
examples/llava/: clip.cpp  llava.cpp
examples/main/: main.cpp
ggml/: CMakeLists.txt
ggml-20250531/: CMakeLists.txt
ggml-20250531/src/: CMakeLists.txt
ggml-20250531/src/ggml-hexagon/: ggml-hexagon.cpp
ggml-20250531/src/ggml-hexagon/kernels/: skel.h
ggml/include/: ggml-backend.h  ggml-cpu.h  ggml-hexagon.h  ggml.h  gguf.h
ggml/src/: CMakeLists.txt  ggml-aarch64.c  ggml-backend-reg.cpp  ggml-impl.h  ggml-quants.c  ggml.c  gguf.cpp
ggml/src/ggml-blas/: CMakeLists.txt
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu-aarch64.cpp  ggml-cpu-quants.c  ggml-cpu.c  ggml-cpu.cpp
ggml/src/ggml-cpu/arch/x86/: repack.cpp
ggml/src/ggml-hexagon/: CMakeLists.txt  ggml-hexagon.cpp  htp-utils.c  htp-utils.h
ggml/src/ggml-hexagon/htp/: CMakeLists.txt  hvx-exp.c  hvx-inverse.c  hvx-utils.c  hvx-utils.h  matmul-ops.c  softmax-ops.c  unary-ops.c
ggml/src/ggml-hexagon/kernels/: Makefile  add.c  entry.c  ggml-dsp.c  ggml-dsp.h  ggmlop_ap_skel.c  ggmlop_ap_skel.h  ggmlop_cdsp_skel.c  mulmat.c  skel.c  skel.h  stub.c
ggml/src/ggml-opencl/: CMakeLists.txt  ggml-opencl.cpp
ggml/src/ggml-vulkan/: .gitignore  CMakeLists.txt  ggml-vulkan-shaders.hpp  ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  vulkan-shaders-gen.cpp
grammars/: kg_json.gbnf
include/: llama.h
prebuilts/: README.md
prebuilts/ggml-dsp/: README.md
scripts/: aaptest.sh  build-run-android.sh  build-run-ggmlhexagon-android.sh  build-run-ggmlopencl-android.sh  build-run-ggmlvulkan-android.sh  ggml-hexagon-for-binary-lib.cfg  ggml-hexagon.cfg
scripts/snapdragon/adb/: run-bench.sh
scripts/snapdragon/qdc/tests/: test_bench.py
src/: llama-context.cpp  llama-grammar.cpp  llama-kv-cache-unified.cpp  llama-kv-cache.cpp  llama-memory-recurrent.cpp  llama-mmap.cpp  llama-mmap.h  llama-sampler.cpp  llama-sampling.cpp  llama-sampling.h  llama.cpp
tests/: CMakeLists.txt  ggmlhexagon-benchmark.cpp  ggmlhexagon-testops.cpp  test-backend-ops.cpp  test-gguf.cpp  test-thread-safety.cpp
tools/llama-bench/: llama-bench.cpp
tools/main/: main.cpp
tools/mtmd/: clip.cpp  mtmd-audio.cpp  mtmd-helper.cpp
tools/mtmd/debug/: mtmd-debug.h
